PKindustries/PKIndustries.css
:root{
  --main-bg-color: #FBF7F4;
  --main-bg-dark-color: #333D40; 
  --main-dark-text-color: #333D40;
  --main-light-text-color:#FBF7F4;
  --alt-green-color: #008253;
  --alt-blue-color: #5A8CB0;
  --alt-bright-green-color: #01FF70;
}

html, body {
  margin: 0;
  padding: 0;

  height: 100%;
  width: 100%;

  font-family: 'Azeret Mono', monospace;
  font-kerning: normal;
  letter-spacing: 2.1px;

  background-color: var(--main-bg-color);

  background-attachment: fixed;
  color: var(--main-dark-text-color);

}

h1, h2{
  text-indent: 0px;
  padding: 1.25rem;
}

ul { 
  text-indent: 0;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: var(--main-bg-dark-color);
  border-bottom: 4px solid var(--alt-bright-green-color);

  display: flex;
  justify-content: flex-end;
  gap: 0;

  z-index: 1000;
}

ul li{
  border-left: 2px solid var(--main-bg-color);
}

ul li:last-child {
  border-left: none;
}

ul li:first-child {
  border-right: none;
  margin-right: auto;
}

ul li a {
  display: block;
  color: var(--main-light-text-color);
  padding: 1.25rem 1rem;
  text-decoration: none;
}

ul li a.active{
  background-color: var(--alt-blue-color);
  color: var(--main-light-text-color);
}

ul li a:hover {
  background-color: var(--main-light-text-color);
  color: var(--main-dark-text-color);
  text-decoration: none;
}

.rectangle{
  position: relative; 
  width: 100%;
  height: auto;
  background-color: var(--alt-green-color);
}

h1{
  -webkit-font-smoothing: antialiased; /* Chrome + Safari */
  -moz-osx-font-smoothing: grayscale;  /* Firefox */

  word-spacing: -1.25rem;

  background-color: var(--alt-green-color);
  color: var(--main-light-text-color);
  font-size: clamp(1.5rem, 5vw, 4rem);
  padding: 4.5rem;
  margin: 0px 0px;
  display: flex;
  text-align: left;
  justify-content: space-between;
  gap: 1.25rem;
}

h1 span{
  position: relative;
  top: 7rem;
  
}

h1 img {
  padding-top: 3rem;
  width: clamp(12rem, 40vw, 48rem);
  height: auto;
  vertical-align: middle;
  border-radius: 4px;
  image-rendering: auto;
}

.blogWords {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: left;
  padding: 3rem;
  max-width: 60rem;

  margin: 0 auto;
}

.blogWords h2 {
  padding-left: 3rem;
  max-width: 60rem;
  width: 100%;
  font-size: 200%;
}

.blogWords h2,
.blogWords p {
  padding: 4.5rem;
  padding-top: 0px;
  padding-bottom: 1.5rem;
  font-size: 150%;
  text-align: left;
  box-sizing: border-box;
}

.blogWords img {
  max-width: 80%;
  border-radius: 12px;

  border: 2px solid var(--main-bg-dark-color);
}

.CEO {
  max-width: 84rem;
  display: flex;
  align-items: center;
  gap: 1.25rem;       
  flex-wrap: wrap; 
  padding: 4.5rem; 
}

.CEO h2{
  font-size: 2.8rem;
  color: var(--main-dark-text-color);
  margin-bottom: 1rem;
  text-align: center; 
}


.ceo-content {

  display: flex; 
  align-items: center; 
  gap: 1.5rem;                
  flex-wrap: wrap;  
  justify-content: center; 
}

.ceo-content img {
  width: clamp(12rem, 20rem, 24rem);
  height: auto;
  border-radius: 1.25rem;
}

.ceo-content p {
  font-size: 150%;
  max-width: 48rem;
  line-height: 1.5;
}

.team h2 {
  padding: 4.5rem;
  font-size: 2.8rem;
  color: var(--alt-green-color);
  margin-bottom: 3rem;
}

.team {
  padding: 4rem 2.5rem;
  flex-direction: column; 
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 1.25rem;
  justify-content: center;

  text-indent: 0px;
}

.team-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
  gap: 2rem;
  justify-items: center;
  max-width: 75rem;   
  margin: 0 auto; 
  padding: 4.5rem;
}

.member {
  max-width: 20rem;
  width: 16rem;
  text-align: left;
  background: var(--main-bg-color);
  border: 4px solid var(--alt-green-color);
  border-radius: 12px;
  padding: 1.25rem;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
}

.member:hover {
  transform: translateY(-5px);
  box-shadow: 0 8px 16px rgba(0,0,0,0.1);
}

.member img {
  width: 12rem; /*Images must be square!!!*/
  aspect-ratio: 1;
  object-fit: cover;
  border-radius: 10px;
  display: block;
  margin: 0 auto 15px;
}

.member h3 {
  margin: 10px 0;
  color: var(--main-dark-text-color);
}

.member p {
  font-size: 0.95rem;
}

.hidden {
  max-height: 0;
  overflow: hidden;

  transition: max-height 0.5s ease-out, opacity 0.5s ease-out, padding 0.5s ease-out;
  opacity: 0;
  padding-top: 0;
  padding-bottom: 0;
  visibility: hidden; /* Prevents interaction when hidden */
  /* Remove text-indent for the long paragraph */
  text-indent: 0; 
}


button.toggle {
  border: 2px solid var(--main-bg-dark-color);
  background-color: var(--alt-green-color);
  color: white;
  padding: 0.5rem 1rem;
  border-radius: 8px;
  cursor: pointer;
  transition: background-color 0.3s;
}

button.toggle:hover {
  background-color: var(--alt-blue-color);
  transform: translateY(-2px); 
  box-shadow: 0 10px 4px rgba(0, 0, 0, 0.2);
}

button.toggle:active {
  transform: translateY(1px);
  box-shadow: 0 10px 2px rgba(0, 0, 0, 0.2);
}

.projectHeader{
  max-width: 75rem;
  padding: 1.5rem;
  font-size: 150%;
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;

  margin: 0 auto;
  width: 100%
}

.Projects {
  padding: 1.5rem;
  font-size: 100%;
  text-decoration: none;

  display: flex;
  flex-direction: column;
  align-items: center;

  background-image: url('images/PKIExport.png');
  background-repeat: repeat;
  background-size: 32rem 32rem;
  image-rendering: pixelated;
  background-attachment: fixed;
}

.Projects h2 {
  background: var(--main-bg-color);
  text-indent: 0;
  border-radius: 10px;
  padding: 0.75rem;
  border: 2px solid var(--main-bg-dark-color);
}

.projectBlock{
  font-size: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  max-width: 35rem;
  padding: 1rem;
  margin-bottom: 1.5rem;
  border: 2px solid var(--alt-green-color);
  border-radius: 10px;
  text-decoration: none;
  color: var(--main-dark-text-color);
  transition: transform 0.1s, box-shadow 0.1s, border-color 0.1s;
  background: var(--main-bg-color);
}

.projectBlock:active{
  transform: translateY(10px);
  box-shadow: 0 10px 2px rgba(0, 0, 0, 0.2);
}


.projectBlock:hover{
  text-decoration: none;
  border: 2px solid var(--alt-blue-color);
  transform: translateY(-8px); 
  box-shadow: 0 10px 4px rgba(0, 0, 0, 0.2);
}

.projectBlock img {
  padding-left: 0px;
  padding-right: 0px;
  width: 100%;
  max-height: 11rem;
  object-position: 50% 25%;
  object-fit: cover;
  border-radius: 12px;
}

.BlogPromo img {
  width: 100%;
  max-height: 20rem;
  object-fit: cover;

  border-radius: 12px;
  border: 2px solid var(--main-bg-dark-color);
  object-position: 50% 0%;

  padding: 0;

  display: block;
}

/* Ensure proper sizing */
* {
  box-sizing: border-box;
}

/* Column container */
.row {
  display: grid;
  width: 100%;
  margin: 0 auto;
  grid-template-columns:  1fr minmax(0, 50rem) 1fr;
  gap: 2.5rem;
  align-items: start;

  padding: 2.5rem;

  background-image: url('images/PKIExport.png');
  background-repeat: repeat;
  background-size: 32rem 32rem;
  image-rendering: pixelated;
  background-attachment: fixed;

}
/* Create two unequal columns that sits next to each other */
/* Sidebar/left column */
.side {
  grid-column: 1;
  grid-row: 1;
  padding: 2.5rem;

  background-color: var(--main-bg-color);
  border-radius: 12px;
  border: 2px solid var(--main-bg-dark-color);
}

/* Main column */
.main {
  grid-column: 2;
  grid-row: 1;
  max-width: 50rem;
  width: 100%;

  padding: 2.5rem;

  background-color: var(--main-bg-color);
  border-radius: 12px;
  border: 2px solid var(--main-bg-dark-color);

  display: flex;
  flex-direction: column;
  padding: 1.25rem;
  text-align: left;
}

.main p {
  width: 100%;
  font-size: 150%;
}

.main h2{
  text-indent: 0px;
  color: var(--alt-green-color);
  font-size: 300%;
  padding: 0.75rem;
  margin: 3rem;
  margin-top: 0px;
  padding-top: 0.75rem;
  text-align: center;

  text-indent: 0px;
}

.Stats h2{
  text-indent: 0px;
  text-align: left;
  font-size: 150%;
  padding-left: 0px;
  margin-left: 0px;

}

.artGallery {
  column-count: 3;
  column-gap: 1.25rem;
  padding: 2.5rem;
  max-width: 75rem;
  margin: 0 auto;
}

.artGallery img {
  width: 100%;
  margin-bottom: 1.25rem;
  border-radius: 12px;
  border: 2px solid var(--main-bg-dark-color);
  break-inside: avoid;
  display: block;
  transition: transform .2s ease;
}

.artGallery img:hover {
  transform: scale(1.075);
}

@keyframes fadeInUp {
  from { opacity: 0; transform: translateY(20px); }
  to { opacity: 1; transform: translateY(0); }
}

 h2, p {
  animation: fadeInUp 0.5s ease forwards;
  opacity: 0; /* start hidden */
}


@media screen and (max-width: 700px) {
    .row {
    display: block;
    padding: 1rem;
  }

  .side {
    width: 100%;
    margin-bottom: 1rem;
    justify-self: stretch;
    padding: 1rem;
  }

  .main {
    max-width: 100%;
    margin: 0;
    padding: 1rem;
  }

  .CEO {
    padding: 1rem;
  }

  .ceo-content {
    flex-direction: column;
  }

  .ceo-content p {
    max-width: 100%;
  }

  ul {
    flex-direction: column;
    align-items: stretch;
  }
  ul li a {
    text-align: center;
    padding: 1rem;
  }
}

/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
@media screen and (max-width: 400px) {
  .navbar a {
    float: none;
    width: 100%;
  }
}

.footer {
  padding: 1.25rem; /* Some padding */
  text-align: center; /* Center text*/
  margin-bottom: 0px;
  text-indent: 0px;
}

